2010-01-25  Rik  <octave@nomad.inbox5.com>

	* Makefile.am: Directly run makefile rules in doc/interpreter directory
	for AUTHORS, BUGS, INSTALL.OCTAVE files.

2011-01-25  John W. Eaton  <jwe@octave.org>

	* autogen.sh (AUTOMAKE): Add --foreign to the automake command.
	Check for required GNU files here instead of having automake do it.
	Export AUTOMAKE so our options are actually used.

2011-01-25  John W. Eaton  <jwe@octave.org>

	* Makefile.am (EXTRA_DIST): Remove ROADMAP from the list.

2010-01-24  Rik  <octave@nomad.inbox5.com>

	* AUTHORS: Remove.  File now auto-generated from contributors.texi.
	* Makefile.am: Add rule for AUTHORS file.

2011-01-24  John W. Eaton  <jwe@octave.org>

	* NEWS: Note change in audio/mu2lin.

2010-01-22  Tatsuro MATSUOKA  <tmacchant@yahoo.co.jp>

	* README.MinGW: Small corrections to documentation.

2010-01-22  Rik  <octave@nomad.inbox5.com>

	* README.devel: Update for 3.4 release.

2010-01-22  Rik  <octave@nomad.inbox5.com>

	* HACKING: Revise and incorporate all of file ROADMAP.
	* ROADMAP: Deleted.

2010-01-22  Rik  <octave@nomad.inbox5.com>

	* README.Windows: Reference README.MinGW
	* README.MinGW: Replace placeholder with actual instructions

2011-01-22  John W. Eaton  <jwe@octave.org>

	* configure.ac (AC_INIT): Version is now 3.3.90+.

2011-01-22  John W. Eaton  <jwe@octave.org>

	* configure.ac (AC_INIT): Version is now 3.3.90.
	(OCTAVE_API_VERSION_NUMBER): Now 44.
	(OCTAVE_RELEASE_DATE): Now 2011-01-22.
	(OCTAVE_COPYRIGHT): Update year to 2011.

2010-01-20  Rik  <octave@nomad.inbox5.com>

	* README.Cygwin, README.MacOS, README.Windows, README.ftp: Update
	documentation files for 3.4 release.

	* README.MinGW: Create placeholder for new README file.

2011-01-20  John W. Eaton  <jwe@octave.org>

	* bootstrap: Update from gnulib sources.

2011-01-20  John W. Eaton  <jwe@octave.org>

	* configure.ac, NEWS: Update for backend -> graphics_toolkit change.

2010-01-17  Rik  <octave@nomad.inbox5.com>
